--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet restore
       - name: DocFX Build
         working-directory: docs
-        run: docfx docfx.json
+        run: docfx 'docs/docfx.json'
         continue-on-error: false
       - name: Publish
         if: github.event_name == 'push'
