--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.101
+
       - name: Setup DocFX
         uses: crazy-max/ghaction-chocolatey@v1
         with:
@@ -25,7 +24,7 @@ jobs:
         run: dotnet restore
       - name: DocFX Build
         working-directory: docs
-        run: docfx 'docs/docfx.json'
+        run: docfx 'docfx.json'
         continue-on-error: false
       - name: Publish
         if: github.event_name == 'push'
