--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
-
+        with:
+          dotnet-version: 6.0
       - name: Setup DocFX
         uses: crazy-max/ghaction-chocolatey@v1
         with:
