--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -2,8 +2,9 @@
   href: CHANGELOG.md
 - name: Districts
   href: Districts/
+  topicHref: Districts/Index.md
 - name: Festivals
   href: Festivals/
-  topicHref: api/index.md
+  topicHref: Festivals/Index.md
 - name: GitHub
   href: https://github.com/bipulraman/AboutBihar/
