--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: DocFX Build and Publish
 
 on:
   push:
-    branches: main
+    branches: main1
   pull_request:
-    branches: main
+    branches: main1
     
 jobs:
   generate-docs:
