--- a/docs/Districts/toc.yml
+++ b/docs/Districts/toc.yml
@@ -1,6 +1,6 @@
 - name: 'Districts'
-  href: Index.md
+  href: index.md
 - name: 'Sitamarhi'
-  href: Sitamarhi.md
+  href: sitamarhi.md
 - name: 'Motihari'
-  href: Motihari.md
+  href: motihari.md
