--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,10 +1,8 @@
-- name: Changelog
-  href: CHANGELOG.md
 - name: Districts
   href: districts/
   topicHref: districts/index.md
 - name: Festivals
   href: Festivals/
   topicHref: Festivals/Index.md
-- name: GitHub
+- name: Contribute
   href: https://github.com/bipulraman/AboutBihar/
