--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -4,5 +4,8 @@
 - name: Festivals
   href: Festivals/
   topicHref: Festivals/Index.md
+- name: Tourism
+  href: Tourism/
+  topicHref: Tourism/Index.md
 - name: Contribute
   href: https://github.com/bipulraman/AboutBihar/
