--- a/docs/Festivals/toc.yml
+++ b/docs/Festivals/toc.yml
@@ -1,5 +1,7 @@
 - name: 'Festivals'
   href: Index.md
+- name: 'Chhath'
+  href: Chhath.md
 - name: 'Jood Sheetal'
   href: JoodSheetal.md
 - name: 'Sama Chakeva'
