--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -5,8 +5,8 @@
   href: Festivals/
   topicHref: Festivals/Index.md
 - name: Tourism
-  href: Tourism/
-  topicHref: Tourism/Index.md
+  href: #
+  topicHref: #
 - name: Heritage
   href: #
 - name: Foods
