--- a/docs/info/toc.yml
+++ b/docs/info/toc.yml
@@ -1,6 +1,6 @@
-- name: 'Introduction'
+- name: Introduction
   href: intro.md
-- name: 'History'
+- name: History
   href: history.md
-- name: 'Districts'
+- name: Districts
   href: districts.md
