--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -5,7 +5,7 @@
   href: festivals/
   topicHref: festivals/index.md
 - name: Tourism
-  href: #
+  href: tourism/
   topicHref: #
 - name: Heritage
   href: #
