--- a/docs/festivals/toc.yml
+++ b/docs/festivals/toc.yml
@@ -1,4 +1,5 @@
 - name: Index
   href: index.md
-- name: Kartik Festivals
+- name: Kartik (Oct-Nov)
   href: kartik/toc.yml
+  topicHref: kartik/index.md
